[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ScoreScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/DynamicFont.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.917647, 0.537255, 0.603922, 1 )

[node name="MainMenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
anchor_right = 1.0
margin_bottom = 800.0
custom_constants/separation = 15
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MainMenuContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 100

[node name="TextureRect" type="TextureRect" parent="MainMenuContainer/VBoxContainer/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_bottom = -50.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label" type="Label" parent="MainMenuContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 600.0
margin_bottom = 289.0
custom_fonts/font = ExtResource( 6 )
text = "Thanks for playing!"
align = 1

[node name="Label2" type="Label" parent="MainMenuContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 600.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 6 )
text = "Final score"
align = 1

[node name="Label3" type="Label" parent="MainMenuContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 600.0
margin_bottom = 547.0
custom_fonts/font = ExtResource( 6 )
text = "
0


"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuContainer/VBoxContainer"]
anchor_right = 1.0
margin_top = 562.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/VBoxContainer/MarginContainer2"]
anchor_left = 0.1
anchor_right = 0.9
margin_bottom = 238.0
custom_constants/separation = 25

[node name="BackToMainMenu" type="Button" parent="MainMenuContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 480.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "go to main menu"

[connection signal="button_down" from="MainMenuContainer/VBoxContainer/MarginContainer2/VBoxContainer/BackToMainMenu" to="." method="_on_BackToMainMenu_button_down"]
